--- a/templates/clientes.html
+++ b/templates/clientes.html
@@ -11,8 +11,8 @@
 
 </h1>Este es el listado de clientes registrados</h1>
 
-<p style="color: red;"> Cliente {{Nombre}}</p>
-<p style="color: blue;"> {{Npellido}} </p>
+<p style="color: red;"> Cliente {{ nombre }}</p>
+<p style="color: blue;"> {{ Apellido }} </p>
 
 {% for notas in notas}
 </body>
